--- a/config_quickedit.routing.yml
+++ b/config_quickedit.routing.yml
@@ -16,28 +16,24 @@ config_quickedit.default_controller_load:
   requirements:
     _permission: 'access content'
 
-config_quickedit.load:
-  path: 'config_quickedit/load'
-  defaults:
-    _entity_form: entity_view_display.config_quickedit
-    _title: 'Load'
-    entity_type_id: 'node'
-    bundle: 'article'
-    view_mode_name: 'teaser'
-  requirements:
-    _permission: 'access content'
-config_quickedit.load2:
-  path: 'config_quickedit/load2/{image_style}'
-  defaults:
-    _entity_form: image_style.edit
-    _title: 'Load'
-    image_style: large
-  requirements:
-    _permission: 'access content'
-config_quickedit.field_formater:
-  path: 'config_quickedit/{entity_type_id}/{bundle}/{view_mode_name}/{field_name}'
+config_quickedit.entity_view_display:
+  path: 'config_quickedit/entity_view_display/{entity_type_id}/{bundle}/{view_mode_name}'
   defaults:
     _entity_form: entity_view_display.config_quickedit_formatter
     _title: 'Load'
+  requirements:
+    _permission: 'access content'
+config_quickedit.entity_view_fields:
+  path: 'config_quickedit/entity-view-fields/{entity_type_id}/{bundle}/{view_mode_name}'
+  defaults:
+    _controller: '\Drupal\config_quickedit\Controller\FieldController::listField'
+    _title: 'Fields'
+  requirements:
+    _permission: 'access content'
+config_quickedit.field_formatter:
+  path: 'config_quickedit/field-formatter/{entity_type_id}/{bundle}/{view_mode_name}/{field_name}'
+  defaults:
+    _entity_form: entity_view_display.config_quickedit_formatter
+    _title: 'Fields'
   requirements:
     _permission: 'access content'
