--- a/config_quickedit.routing.yml
+++ b/config_quickedit.routing.yml
@@ -1,28 +1,4 @@
-
-# In order to to create pages it is necessary to define routes for them.
-# A route maps a URL path to a controller. It defines what function
-# or method will be called when a URL is accessed.
-# If the user accesses http://drupal8.dev/config_quickedit/load/{entity_type}/{entity_id}, the routing
-# system will look for a route with that path. In this case it will find a
-# match, and execute the _controller callback. In this case the callback is
-# defined as a classname
-# ("\Drupal\config_quickedit\Controller\DefaultController")
-# and a method ("load").
-config_quickedit.default_controller_load:
-  path: 'config_quickedit/load/{entity_type}/{entity_id}'
-  defaults:
-    _controller: '\Drupal\config_quickedit\Controller\DefaultController::load'
-    _title: 'Load'
-  requirements:
-    _permission: 'access content'
-
-config_quickedit.entity_view_display:
-  path: 'config_quickedit/entity_view_display/{entity_type_id}/{bundle}/{view_mode_name}'
-  defaults:
-    _entity_form: entity_view_display.config_quickedit_formatter
-    _title: 'Load'
-  requirements:
-    _permission: 'access content'
+# List all fields for EntityViewDisplay
 config_quickedit.entity_view_fields:
   path: 'config_quickedit/entity-view-fields/{entity_type_id}/{bundle}/{view_mode_name}'
   defaults:
@@ -30,6 +6,7 @@ config_quickedit.entity_view_fields:
     _title: 'Fields'
   requirements:
     _permission: 'access content'
+# Edit an individual field
 config_quickedit.field_formatter:
   path: 'config_quickedit/field-formatter/{entity_type_id}/{bundle}/{view_mode_name}/{field_name}'
   defaults:
